--- a/src/monsterwm.cbp
+++ b/src/monsterwm.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="decorations" />
+		<Option title="monsterwm" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="decorations" prefix_auto="1" extension_auto="1" />
+				<Option output="../monsterwm" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -16,7 +16,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="decorations" prefix_auto="1" extension_auto="1" />
+				<Option output="../monsterwm" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -34,7 +34,8 @@
 		<Linker>
 			<Add option="-lX11" />
 		</Linker>
-		<Unit filename="decorations.c">
+		<Unit filename="config.h" />
+		<Unit filename="monsterwm.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Extensions>
